app/assets/stylesheets/pages.scss
@import "dimensions";
@import "colors";
@import "shared/layout";
@import "shared/traits";
@import "shared/attributions";
@import "media_grid";

$trait-key-color: #6f5a42;
$trait-val-color: #c06a11;

$border-width: 1px;
$border: $border-width solid $light-gray;

$tabs-height: 25px;
$tabs-m-height: 30px;
$head-height: 70px;
$actions-height: 45px;
$head-icon-height: 70px;

$pad-l-sm: 13px;
$pad-l-m: 17px;

$font-sz-sm: 11px;
$font-sz-m: 14px;

$habitat-chart-min-width: 600px;
$habitat-chart-trans-width: 1205px;

.img-info {
  background: rgba(0, 0, 0, .8);
  color: $white;
  bottom: 0;
  font-size: $font-sz-sm;
  height: 20px;
  line-height: 20px;
  padding-left: $pad-l-sm;
  position: absolute;
  width: 100%;
}

.hero-link {
  display: block;
  width: 100%;
}

.hero {
  align-items: center;
  background: $light-gray;
  display: flex;
  overflow: hidden;
  justify-content: center;
  position: relative;
  width: 100%;
}

.l-right-col {
  display: none;
}

.hero-after {
  display: flex;
  max-height: 702px;
}

.hero-before {
  max-height: 60vh;
}

.head-icon {
  float: left;
  height: $head-icon-height;
  margin-right: $padding-left-s;
}

.head-txt {
  height: $head-icon-height;
  overflow: auto;
  margin: 0 $padding-left-s;
  white-space: nowrap;
}

.names-wrapper {
  display: inline-block;
  min-height: 35px; // to accommodate collect button
  min-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  padding-right: 125px;
  position: relative;
  vertical-align: top;
}

.names {
  display: inline-block;
  margin-top: 2px;
  white-space: nowrap;

  & > h1 {
    font-size: 20px;
    font-weight: 600;
    margin: 2px 0;
  }

  & > h2 {
    font-size: 13px;
    font-weight: normal;
    margin: 2px 0 0 0;
  }
}

.name-card-arrows {
  & > i {
    cursor: pointer;
  }
}

.hier {
  font-size: 11px;
  margin: 2px 0;
  width: 100%;
}

.l-tabs {
  background: #fff;
  overflow: hidden;
  position: fixed;
  width: 100%;
  z-index: 10;
}

.l-page-head {
  border-top: $border;
}

.l-right-col {
  padding-right: 10px;
  width: 100%;
}

.page-actions {
  padding: 10px $pad-l-m;
  list-style-type: none;
  margin: 0;

  & > li {
    display: inline-block;
    margin-right: 3px;
  }
}

.page-filters {
  position: fixed;
  width: 100%;
  z-index: 2;
}

.tabs {
  border-top: $border;
  border-bottom: $border;
  font-size: 11px;
  height: $tabs-height;
  list-style: none;
  margin: 0 auto;
  overflow: hidden;
  padding: 0 $padding-left-s;
  white-space: nowrap;
}

  .tab {
    $height: $tabs-height - 2 * $border-width;
    cursor: pointer;
    display: inline-block;
    height: $height;
    line-height: $height;
    padding: 0 7px;
    vertical-align: middle;
  }

  .is-tab-selected {
    background: $eol-logo-blue;

    & > a {
      color: $white;
      cursor: normal;
      text-decoration: none;
    }
  }

.desc {
  $padding-tb: 13px;

  border-bottom: $border;
  font-size: 11px;
  line-height: 1.36;
  margin: 0;
  padding: 0 $padding-left-s $padding-tb $padding-left-s;

  & > p {
    margin: $padding-tb 0 0 0;
  }
}

.sample-traits {
  display: flex;
  flex-wrap: wrap;
  font-size: $font-sz-sm;
  list-style: none;
  margin: 0;
  padding: 0;

  & > li {
    border-bottom: $border;
    border-right: $border;
    flex: 1 0 auto;
    height: 48px;
    padding: 7px $pad-l-sm;
  }
}

.l-content {
  overflow: hidden;
  margin-top: $head-height + $tabs-height;
  min-height: 400px;
}

.l-below-filters {
  padding-top: 40px;
}

.page-children {
  margin-top: 10px;
  padding: 12px 0 0 $padding-left-m;
}

.page-child-list {
  list-style: none;
  padding: 0;
}

.article {
  border-top: 1px solid $light-gray;
  margin-top: 20px;
  padding: 20px 0 0 $pad-l-sm;
}

div:first-of-type.article {
  border-top: none;
  padding-top: 0;
}

.title-article {
  margin-bottom: 4px;
}

.page-habitat-chart {
  display: none;
  padding-bottom: 10px;
}

.page-habitat-chart-left {
  border-bottom: $border;
}

.l-overview-full {
  width: 100%;
}

// leaflet map
.map-contain {
  margin: 20px auto;
  max-width: 90%;
}

.map-contain-overview {
  width: 70%;
}

.map {
  border: 1px solid #aaa;
  height: 500px;
  width: 100%;
  z-index: 1;
}

.other-maps-title {
  text-align: center;
}

@media(min-width: $habitat-chart-min-width) {
  .page-habitat-chart-left {
    display: block;
  }
}

@media(min-width: $habitat-chart-trans-width) {
  .page-habitat-chart-right {
    display: block;
  }

  .page-habitat-chart-left {
    display: none;
  }
}

@media(min-width: $width-m) {
  .l-content {
    margin-top: $head-height + $tabs-m-height;
  }

  .tabs {
    height: $tabs-m-height;

    & > li {
      $height: $tabs-m-height - 2 * $border-width;
      height: $height;
      line-height: $height;
      font-size: 14px;
      padding: 0 10px;
    }
  }

  .img-info {
    font-size: $font-sz-m;
    height: 30px;
    line-height: 30px;
    padding-left: $pad-l-m
  }

  .desc {
    $padding-tb: 15px;
    font-size: 14px;
    padding: 0 $padding-left-m $padding-tb $padding-left-m;

    & > p {
      margin: $padding-tb 0 0 0;
    }
  }

  .sample-traits {
    font-size: $font-sz-m;

    & > li {
      padding-left: $pad-l-m;
      height: 58px;
    }
  }

  .article {
    padding-left: $pad-l-m;
  }
}

@media only print and (min-width: $width-m) {
  .hero {
    margin-left: $padding-left-m;
  }
}

@media(min-width: 1100px) {
  .l-flex {
    display: flex;
  }

  .l-left-col {
    flex: 0 0 auto;
    width: 600px;
  }

  .l-right-col {
    display: block;
  }

  .hero-before {
    display: none;
  }

  .map-contain-overview {
    padding: 0 20px;
    max-width: 100%;
    width: 100%;
    
    & > .map {
      height: 350px;
    }
  }

  .page-habitat-chart-left {
    padding-left: $pad-l-m;
  }
}

// trait wordcloud
.trait-wordcloud {
  height: 200px;
  width: 100%;
}

// namespace for Sung's data visualization
.trophic-web {
  $bottom-height: 28px;
  $height: 560px;
  $main-height: $height - $bottom-height;

  display: none;
  height: 560px;
  margin-bottom: 10px;
  width: 100%;
  padding: 0 15px;
  position: relative;

  .trophic-web-title {
    font-size: 14px;
    font-weight: bold;
    margin: 10px 0 0 0;
    text-align: center;
  }

  .trophic-web-inner {
    height: 100%;
    position: relative;
  }

  * {
    font: 12px verdana;
  }

  .node circle{
    stroke: #777;
    stroke-width: 0px;
  }

  .split-left {
    height: $main-height;
    width: 80%;
    position: absolute;
    z-index: 1;
    top: 0;
    overflow-x: hidden;
    left: 0;
  }

  .split-right {
    height: $main-height;
    width: 20%;
    padding: 0 0 0 20px;
    position: absolute;
    z-index: 1;
    top: 0;
    overflow-x: hidden;
    right: 0;
  }

  .split-bottom {
    height: $bottom-height;
    width: 100%;
    position: absolute;
    z-index: 1;
    bottom:0;
    overflow-x: hidden;
    left:0;
    right:0;
    background:white;
  }

  .link {
    stroke: #c1c1c1;
    stroke-width: 1px;
  }

  .new_link {
    stroke: #c1c1c1;
    stroke-width: 1px;
  }

  .link.arrow {
    stroke: #51768C;
    stroke: #c1c1c1;
  }

  .link.prey {
    stroke: #EE7560;
    stroke: #c1c1c1;
  }

  .controls {
    display: inline-block;	 
  }

  button {
    border-radius: 8px;
    font-size: 16px;
    background-color: #e7e7e7;
    color: black;
    border: 2px solid #e7e7e7;
  }

  button:hover {
    background-color: #e7e7e7;
    background-color: white;
  }

  .tooltip-svg {
    margin: 20px 0;
  }

  .tooltip {
    background: #DDDDDD;
    text-align: center;
    width: 200px;
    height: 270px;
    padding: 5px;
    font: 15px verdana;
    border-radius: 10px;
    box-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
  }

  .centered {
    align-items: center;
    display: flex;
    height: 100%;
    justify-content: center;
    width: 100%;
  }
}

  .trophic-web-overview {
    padding-top: 20px;
    padding-bottom: 20px;
    border-top: $border;
    border-bottom: $border;
  }


@media(min-width: 740px) {
  .trophic-web {
    display: block;
  }
}

@media only print {
  .l-tabs {
    position: relative;
  }

  .tabs {
    display: none;
  }

  .head-icon {
    display: none;
  }

  .l-content {
    margin-top: 0;
  }

  .names-buttons {
    display: none;
  }

  .hero {
    max-width: 300px;
    margin-left: $padding-left-s;
  }
}

